# frameflow

./: .gitignore  Dockerfile  Makefile  README.md  requirements.txt  setup.cfg
.github/: CODEOWNERS
.github/workflows/workflows/: docker-publish.yml
frameflow/: claude_client.py  cli.py  client.py  gemini_client.py  local_llm_client.py  logging_config.py  openai_client.py  processor.py  utils.py  verify_models.py
tests/: conftest.py  test_cli.py  test_clients.py  test_processor.py
