[metadata]
name = frameflow
version = 0.1.0
author = Your Name
description = Transcribe technical videos into structured How-To docs with frames.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/frameflow
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    openai
    anthropic
    google-generativeai
    whisper
    ffmpeg-python
    tiktoken
    requests
    pytest

[options.entry_points]
console_scripts =
    frameflow=frameflow.cli:main
